[package]
name = "rust-toy"
version = "0.1.0"
authors = ["mk10969 <mk10969@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
parse_duration = "2.1.0"

colored = "2.0.0"
log = "0.4"
env_logger = "0.8.2"
console = "0.13.0"
ctrlc = "3.1.7"

# Itert の拡張版
itertools = "0.9.0"

# std::process::Commandを使いやすくした版
duct = "0.13.4"

# cfg(unix)の場合/bin/sh -c ...
# cfg(windows)の場合%COMSPEC% /C ...
# を呼びだすduct::{cmd, cmd!}のショートカット
duct_sh = "0.13.4"

# エラーハンドリングライブラリ
anyhow = "1.0.36"
thiserror = "1.0.20"

# std::collections::{BTreeMap, BTreeSet, HashMap, HashSet}
# に対してvec!のような、マクロを提供
# 便利！！！
maplit = "1.0.2"

# clapのラッパー
structopt = "0.3.18"
# clap = "2.33.3"
regex = "1.4.2"
num_cpus = "1.13.0"
